# billing

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
billing/: __init__.py  __main__.py  main.py  services.py
billing/config/: __init__.py  default.py  utils.py
billing/db/: alembic.ini
billing/db/connection/: __init__.py  session.py
billing/db/migration/: env.py
billing/db/migration/versions/: 2023-11-23_fa8f7d9bbc4b_.py  2023-12-17_aea01a961fcc_.py
billing/db/models/: __init__.py  bill.py  news.py  view.py
billing/endpoints/: __init__.py  content.py  health_check.py  mailing_list.py  sender.py  subscribe.py  template.py  yandex_provider.py
billing/endpoints/examples/: request.py  webhook.py
billing/esb/: common.py  connection.py  emitter.py  recive.py  send.py
billing/esb/example/: emit_log.py  emit_log_direct.py  new_task.py  recive.py  recive_log.py  send.py  task_worker.py
billing/provider/: abstract.py  common.py  main.py  utils.py
billing/provider/yapay/: client.py  payment.py
billing/schemas/: __init__.py  newsletter.py
billing/schemas/yapay/: cart.py  common.py  delivery.py  item.py  operation.py  payment.py  receipt.py  subscription.py  webhook.py
billing/schemas/yapay/order/: request.py  response.py
billing/sheduler/: celery_app.py  clearing.py  test.py
deploy/billing/: Dockerfile  entrypoint.sh
deploy/workers/: Dockerfile  entrypoint.sh  requirements.txt
doc/: notification.sql
doc/yapay/: openapi.json  order_id_response.json  order_request.json  order_response.json
doc/yapay/merchant/: openapi.json
doc/yapay/payment/: openapi.json
tests/: conftest.py
